syntax = "proto3";
package purchases;

option go_package = "pb/purchases;purchases";
option java_package = "com.wiradata.erpapplication.purchases";
option java_multiple_files = true;

import "purchases/supplier_message.proto";
import "purchases/purchase_message.proto";
import "purchases/purchase_return_message.proto";

service PurchaseService {
  rpc SupplierCreate(Supplier) returns (Supplier) {}
  rpc SupplierUpdate(Supplier) returns (Supplier) {}
  rpc SupplierView(Id) returns (Supplier) {}
  rpc SupplierList(ListSupplierRequest) returns (stream ListSupplierResponse) {}

  rpc PurchaseCreate(Purchase) returns (Purchase) {}
  rpc PurchaseUpdate(Purchase) returns (Purchase) {}
  rpc PurchaseView(Id) returns (Purchase) {}
  rpc PurchaseList(ListPurchaseRequest) returns (stream ListPurchaseResponse) {}

  rpc PurchaseReturnCreate(PurchaseReturn) returns (PurchaseReturn) {}
  rpc PurchaseReturnUpdate(PurchaseReturn) returns (PurchaseReturn) {}
  rpc PurchaseReturnView(Id) returns (PurchaseReturn) {}
  rpc PurchaseReturnList(ListPurchaseReturnRequest) returns (stream ListPurchaseReturnResponse) {}
}